--- a/web/_layouts/mimcss.html
+++ b/web/_layouts/mimcss.html
@@ -2,7 +2,15 @@
 layout: default
 ---
 
-<div class="wide-container elastic">
+    <style>
+        #propertySearchDropdown {
+            padding: 2px;
+            color: blue;
+            outline: unset;
+        }
+    </style>
+
+    <div class="wide-container elastic">
 	<div class="left-sidebar">
 		<div class="left-sidebar-title">
 			Mimcss
@@ -19,6 +27,11 @@ layout: default
 			<b>Reference</b>
 			<ul>
                 <li><a href="{{page.rootpath}}/typedoc.html">Typedoc Reference</a></li>
+                <li>Styles:
+                    <select id="propertySearchDropdown" onchange="gotoSelectedStyleProperty();">
+                        <option value="propertySearchPlaceholder">--Choose style property--</option>
+                    </select>
+                </li>
                 <!-- <li><a href="{{page.rootpath}}/ref/style-properties.html">Style Properties</a></li> -->
 			</ul>
 			<b>Playground</b>
@@ -44,3 +57,465 @@ layout: default
 		{{ content }}
 	</div>
 </div>
+
+<script>
+    var propertySearchPlaceholder = "propertySearchPlaceholder";
+
+    var styleProperties = [
+        "accentColor",
+        "alignContent",
+        "alignItems",
+        "alignSelf",
+        "alignmentBaseline",
+        "all",
+        "animation",
+        "animationDelay",
+        "animationDirection",
+        "animationDuration",
+        "animationFillMode",
+        "animationIterationCount",
+        "animationName",
+        "animationPlayState",
+        "animationTimingFunction",
+        "appearance",
+        "aspectRatio",
+        "backdropFilter",
+        "backfaceVisibility",
+        "background",
+        "backgroundAttachment",
+        "backgroundBlendMode",
+        "backgroundClip",
+        "backgroundColor",
+        "backgroundImage",
+        "backgroundOrigin",
+        "backgroundPosition",
+        "backgroundPositionX",
+        "backgroundPositionY",
+        "backgroundRepeat",
+        "backgroundSize",
+        "baselineShift",
+        "blockSize",
+        "border",
+        "borderBlock",
+        "borderBlockColor",
+        "borderBlockEnd",
+        "borderBlockEndColor",
+        "borderBlockEndStyle",
+        "borderBlockEndWidth",
+        "borderBlockStart",
+        "borderBlockStartColor",
+        "borderBlockStartStyle",
+        "borderBlockStartWidth",
+        "borderBlockStyle",
+        "borderBlockWidth",
+        "borderBottom",
+        "borderBottomColor",
+        "borderBottomLeftRadius",
+        "borderBottomRightRadius",
+        "borderBottomStyle",
+        "borderBottomWidth",
+        "borderCollapse",
+        "borderColor",
+        "borderEndEndRadius",
+        "borderEndStartRadius",
+        "borderImage",
+        "borderImageOutset",
+        "borderImageRepeat",
+        "borderImageSlice",
+        "borderImageSource",
+        "borderImageWidth",
+        "borderInline",
+        "borderInlineColor",
+        "borderInlineEnd",
+        "borderInlineEndColor",
+        "borderInlineEndStyle",
+        "borderInlineEndWidth",
+        "borderInlineStart",
+        "borderInlineStartColor",
+        "borderInlineStartStyle",
+        "borderInlineStartWidth",
+        "borderInlineStyle",
+        "borderInlineWidth",
+        "borderLeft",
+        "borderLeftColor",
+        "borderLeftStyle",
+        "borderLeftWidth",
+        "borderRadius",
+        "borderRight",
+        "borderRightColor",
+        "borderRightStyle",
+        "borderRightWidth",
+        "borderSpacing",
+        "borderStartEndRadius",
+        "borderStartStartRadius",
+        "borderStyle",
+        "borderTop",
+        "borderTopColor",
+        "borderTopLeftRadius",
+        "borderTopRightRadius",
+        "borderTopStyle",
+        "borderTopWidth",
+        "borderWidth",
+        "bottom",
+        "boxDecorationBreak",
+        "boxShadow",
+        "boxSizing",
+        "breakAfter",
+        "breakBefore",
+        "breakInside",
+        "bufferedRendering",
+        "captionSide",
+        "caretColor",
+        "clear",
+        "clip",
+        "clipPath",
+        "clipRule",
+        "color",
+        "colorAdjust",
+        "colorInterpolation",
+        "colorInterpolationFilters",
+        "colorScheme",
+        "columnCount",
+        "columnFill",
+        "columnGap",
+        "columnRule",
+        "columnRuleColor",
+        "columnRuleStyle",
+        "columnRuleWidth",
+        "columnSpan",
+        "columnWidth",
+        "columns",
+        "contain",
+        "content",
+        "contentVisibility",
+        "counterIncrement",
+        "counterReset",
+        "counterSet",
+        "cursor",
+        "direction",
+        "display",
+        "dominantBaseline",
+        "emptyCells",
+        "fill",
+        "fillOpacity",
+        "fillRule",
+        "filter",
+        "flex",
+        "flexBasis",
+        "flexDirection",
+        "flexFlow",
+        "flexGrow",
+        "flexShrink",
+        "flexWrap",
+        "float",
+        "floodColor",
+        "floodOpacity",
+        "font",
+        "fontFamily",
+        "fontFeatureSettings",
+        "fontKerning",
+        "fontLanguageOverride",
+        "fontOpticalSizing",
+        "fontSize",
+        "fontSizeAdjust",
+        "fontStretch",
+        "fontStyle",
+        "fontSynthesis",
+        "fontVariant",
+        "fontVariantAlternates",
+        "fontVariantCaps",
+        "fontVariantEastAsian",
+        "fontVariantLigatures",
+        "fontVariantNumeric",
+        "fontVariantPosition",
+        "fontVariationSettings",
+        "fontWeight",
+        "forcedColorAdjust",
+        "gap",
+        "grid",
+        "gridArea",
+        "gridAutoColumns",
+        "gridAutoFlow",
+        "gridAutoRows",
+        "gridColumn",
+        "gridColumnEnd",
+        "gridColumnGap",
+        "gridColumnStart",
+        "gridGap",
+        "gridRow",
+        "gridRowEnd",
+        "gridRowGap",
+        "gridRowStart",
+        "gridTemplate",
+        "gridTemplateAreas",
+        "gridTemplateColumns",
+        "gridTemplateRows",
+        "hangingPunctuation",
+        "height",
+        "hyphens",
+        "imageOrientation",
+        "imageRendering",
+        "initialLetter",
+        "inlineSize",
+        "inset",
+        "insetBlock",
+        "insetBlockEnd",
+        "insetBlockStart",
+        "insetInline",
+        "insetInlineEnd",
+        "insetInlineStart",
+        "isolation",
+        "justifyContent",
+        "justifyItems",
+        "justifySelf",
+        "left",
+        "letterSpacing",
+        "lightingColor",
+        "lineBreak",
+        "lineClamp",
+        "lineHeight",
+        "listStyle",
+        "listStyleImage",
+        "listStylePosition",
+        "listStyleType",
+        "margin",
+        "marginBlock",
+        "marginBlockEnd",
+        "marginBlockStart",
+        "marginBottom",
+        "marginInline",
+        "marginInlineEnd",
+        "marginInlineStart",
+        "marginLeft",
+        "marginRight",
+        "marginTop",
+        "marginTrim",
+        "marker",
+        "markerEnd",
+        "markerMid",
+        "markerStart",
+        "mask",
+        "maskBorder",
+        "maskBorderMode",
+        "maskBorderOutset",
+        "maskBorderRepeat",
+        "maskBorderSlice",
+        "maskBorderSource",
+        "maskBorderWidth",
+        "maskClip",
+        "maskComposite",
+        "maskImage",
+        "maskMode",
+        "maskOrigin",
+        "maskPosition",
+        "maskRepeat",
+        "maskSize",
+        "maskType",
+        "mathStyle",
+        "maxBlockSize",
+        "maxHeight",
+        "maxInlineSize",
+        "maxWidth",
+        "minBlockSize",
+        "minHeight",
+        "minInlineSize",
+        "minWidth",
+        "mixBlendMode",
+        "objectFit",
+        "objectPosition",
+        "offset",
+        "offsetAnchor",
+        "offsetDistance",
+        "offsetPath",
+        "offsetPosition",
+        "offsetRotate",
+        "opacity",
+        "order",
+        "orphans",
+        "outline",
+        "outlineColor",
+        "outlineOffset",
+        "outlineStyle",
+        "outlineWidth",
+        "overflow",
+        "overflowAnchor",
+        "overflowBlock",
+        "overflowClipMargin",
+        "overflowInline",
+        "overflowWrap",
+        "overflowX",
+        "overflowY",
+        "overscrollBehavior",
+        "overscrollBehaviorBlock",
+        "overscrollBehaviorInline",
+        "overscrollBehaviorX",
+        "overscrollBehaviorY",
+        "padding",
+        "paddingBlock",
+        "paddingBlockEnd",
+        "paddingBlockStart",
+        "paddingBottom",
+        "paddingInline",
+        "paddingInlineEnd",
+        "paddingInlineStart",
+        "paddingLeft",
+        "paddingRight",
+        "paddingTop",
+        "pageBreakAfter",
+        "pageBreakBefore",
+        "pageBreakInside",
+        "paintOrder",
+        "perspective",
+        "perspectiveOrigin",
+        "placeContent",
+        "placeItems",
+        "placeSelf",
+        "pointerEvents",
+        "position",
+        "quotes",
+        "resize",
+        "right",
+        "rotate",
+        "rowGap",
+        "rubyAlign",
+        "rubyOverhang",
+        "rubyPosition",
+        "scale",
+        "scrollBehavior",
+        "scrollMargin",
+        "scrollMarginBlock",
+        "scrollMarginBlockEnd",
+        "scrollMarginBlockStart",
+        "scrollMarginBottom",
+        "scrollMarginInline",
+        "scrollMarginInlineEnd",
+        "scrollMarginInlineStart",
+        "scrollMarginLeft",
+        "scrollMarginRight",
+        "scrollMarginTop",
+        "scrollPadding",
+        "scrollPaddingBlock",
+        "scrollPaddingBlockEnd",
+        "scrollPaddingBlockStart",
+        "scrollPaddingBottom",
+        "scrollPaddingInline",
+        "scrollPaddingInlineEnd",
+        "scrollPaddingInlineStart",
+        "scrollPaddingLeft",
+        "scrollPaddingRight",
+        "scrollPaddingTop",
+        "scrollSnapAlign",
+        "scrollSnapStop",
+        "scrollSnapType",
+        "scrollbarColor",
+        "scrollbarGutter",
+        "scrollbarWidth",
+        "shapeImageThreshold",
+        "shapeMargin",
+        "shapeOutside",
+        "shapeRendering",
+        "stopColor",
+        "stopOpacity",
+        "stroke",
+        "strokeDasharray",
+        "strokeDashoffset",
+        "strokeLinecap",
+        "strokeLinejoin",
+        "strokeMiterlimit",
+        "strokeOpacity",
+        "strokeWidth",
+        "tabSize",
+        "tableLayout",
+        "textAlign",
+        "textAlignLast",
+        "textAnchor",
+        "textCombineUpright",
+        "textDecoration",
+        "textDecorationColor",
+        "textDecorationLine",
+        "textDecorationSkipInk",
+        "textDecorationStyle",
+        "textDecorationThickness",
+        "textEmphasis",
+        "textEmphasisColor",
+        "textEmphasisPosition",
+        "textEmphasisStyle",
+        "textFillColor",
+        "textIndent",
+        "textJustify",
+        "textKashida",
+        "textKashidaSpace",
+        "textOrientation",
+        "textOverflow",
+        "textRendering",
+        "textShadow",
+        "textSizeAdjust",
+        "textStroke",
+        "textStrokeColor",
+        "textStrokeWidth",
+        "textTransform",
+        "textUnderlinePosition",
+        "top",
+        "touchAction",
+        "transform",
+        "transformBox",
+        "transformOrigin",
+        "transformStyle",
+        "transition",
+        "transitionDelay",
+        "transitionDuration",
+        "transitionProperty",
+        "transitionTimingFunction",
+        "translate",
+        "unicodeBidi",
+        "userSelect",
+        "vectorEffect",
+        "verticalAlign",
+        "visibility",
+        "whiteSpace",
+        "widows",
+        "width",
+        "willChange",
+        "wordBreak",
+        "wordSpacing",
+        "writingMode",
+        "zIndex",
+        "zoom"
+    ];
+
+    // add options to the search dropdown
+    for( let prop of styleProperties)
+    {
+        var elmOption = document.createElement( "option")
+        elmOption.value = prop;
+        elmOption.innerText = camelToDash(prop);
+        propertySearchDropdown.appendChild( elmOption);
+    }
+
+    function gotoSelectedStyleProperty()
+    {
+        console.log( "in gotoSelectedStyleProperty");
+        var propValue = propertySearchDropdown.value;
+        if (propValue && propValue != propertySearchPlaceholder)
+        {
+            // propertySearchDropdown.value = propertySearchPlaceholder;
+            if (location.href.includes("typedoc.html?path=interfaces/Stylesets.IStyleset.html#"))
+            {
+                location.hash = propValue;
+                referenceFrame.src = "/reference/interfaces/Stylesets.IStyleset.html#" + propValue;
+            }
+            else
+                location.href = "/typedoc.html?path=interfaces/Stylesets.IStyleset.html#" + propValue;
+        }
+    }
+
+    function camelToDash( camel)
+    {
+        return camel.replace( /([a-zA-Z])(?=[A-Z])/g, '$1-').toLowerCase();
+    }
+
+    function dashToCamel( dash)
+	{
+        return !dash ? dash : dash.replace( /-([a-zA-Z])/g, (x, $1) => $1.toUpperCase());
+    }
+</script>
