Implement @scroll-timeline rule and animation-timeline property.

--- a/web/_layouts/mimcss.html
+++ b/web/_layouts/mimcss.html
@@ -85,6 +85,7 @@ layout: default
         "$page",
         "$pageName",
         "$property",
+        "$scrollTimeline",
         "$style",
         "$supports",
         "$tag",
@@ -132,6 +133,7 @@ layout: default
         "animation-iteration-count",
         "animation-name",
         "animation-play-state",
+        "animation-timeline",
         "animation-timing-function",
         "appearance",
         "aspect-ratio",
@@ -345,7 +347,6 @@ layout: default
         "margin-right",
         "margin-top",
         "margin-trim",
-        "marker",
         "marker-end",
         "marker-mid",
         "marker-start",
