--- a/web/_layouts/mimcss.html
+++ b/web/_layouts/mimcss.html
@@ -51,9 +51,13 @@ layout: default
         </div>
 
         <div class="left-sidebar-bottom">
-            <a href="https://www.npmjs.com/package/mimcss">
+            <a href="https://www.npmjs.com/package/mimcss" target="npm">
                 <img src="https://img.shields.io/npm/v/mimcss.svg?&style=flat-square&color=success"
-                alt="Mimcss npm version">
+                    alt="Mimcss npm version">
+            </a>
+            <a href="https://www.npmjs.com/package/mimcss" target="npm">
+                <img src="https://img.shields.io/npm/dm/mimcss.svg?&style=flat-square&color=success"
+                    alt="Mimcss downloads per month">
             </a>
         </div>
 	</div>
